--- a/style.css
+++ b/style.css
@@ -5,61 +5,156 @@
 }
 
 html,body{
-    height: 100%;
     width: 100%;
-    position: relative;
-    background-color: rgb(131, 151, 189);
-    color: black;
+    height: 100%;
+    background-color:rgb(243, 181, 181);
 }
 
 #main{
     height: 80%;
-    width: 40%;
+    width: 50%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    box-shadow: 5px 5px 23px 20px cyan;
+    box-shadow: 2px 2px 23px 20px gray;
     border-radius: 10%;
-    background-color:antiquewhite;
 }
+h2{
+    font-size: 40px;
+    text-align: center;
+    margin-top: 3%;
+    color:blue;
+    margin-bottom: 3%;
+}
+
 
 #header{
-    font-size: 160%;
-    margin-left:25%;
-    margin-top: 7%;
-}
-
-#con{
-    font-family:cursive;
-    font-size: 18px;
-    margin-top:3% ;
-    margin-left: 5%;
-}
-
-#weight-guide{
-    margin-top: 2%;
-    margin-left: 5%;
-    margin-bottom: 2%;
     font-size: 20px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color:rgb(223, 20, 9);
+    text-align: center;
+}
+
+#input{
+    position: relative;
+    height: 30%;
+    width: 100%;
+    /* background-color: green; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#label{
+    font-size: 35px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#inputfield{
+    margin-top: 3%;
+    margin-bottom: 2%;
+    height: 15%;
+    width: 30%;
+}
+
+#btn{
+    margin-bottom: 1%;
+    height: 17%;
+    width: 30%;
+    color: white;
+    background-color:blue;
+    font-size: 100%;
+}
+
+#result{
+    height: 34%;
+    width: 100%;
+}
+
+.com{
+    text-align: center;
+    font-size: 20px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    color: green;
+}
+
+#lowOrHi{
     color: blue;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    font-weight: 900;
+    margin-top:2%;
+    margin-left: 5%;
+    text-align: center;
+    margin-bottom: 5%;
 }
 
-button{
-    font-size: 90%;
-    margin-top: 8%;
-    margin-left: 30%;
-    color: black;
+#newgame{
+    font-size: 20px;
+    font-weight: 900;
+    color: red;
+    text-align: center;
+    margin-bottom: 10%;
+}
+
+
+/* Media query for mobile devices */
+@media only screen and (max-width: 480px) {
+    #main {
+        width: 90%; /* Make container width 100% for smaller screens */
+        height: auto;
+    }
+    h2{
+        font-size:23px;
+        margin-top: 3%;
+        color:blue;
+        margin-bottom: 4%;
+    }
+    #header{
+        font-size: 15px;
+        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        color:rgb(223, 20, 9);
+        text-align: left;
+        margin-left: 3%;
+    }
+
+    #lowOrHi{
+       font-size: 15px;
+    }
+    #label{
+        font-size: 20px;
+    }
+
     
+  #inputfield{
+    height: 20%;
+    width: 60%;
 }
 
-#results{
-    font-size:20px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color:brown;
-    margin-left:15% ;
-    margin-top: 4%;
+#btn{
+    height: 20%;
+    width: 60%;
+}
+   
+    #input{
+        position: relative;
+        height: 40%;
+        width: 100%;
+        margin-bottom: 4%;
+    }
 }
 
-
+@media only screen and (max-width:768px) {
+    #main {
+        width: 90%; /* Make container width 100% for smaller screens */
+        height: auto;
+    }
+    #btn{
+        height: 25%;
+        width: 40%;
+    }
+    #inputfield{
+        height: 25%;
+        width: 40%;
+    }
+}
