--- a/style.css
+++ b/style.css
@@ -5,156 +5,86 @@
 }
 
 html,body{
-    width: 100%;
     height: 100%;
-    background-color:rgb(243, 181, 181);
+    width: 100%;
+    position: relative;
+    background-color: rgb(131, 151, 189);
+    color: black;
 }
 
 #main{
-    height: 80%;
-    width: 50%;
+    height: auto;
+    width: 30%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    box-shadow: 2px 2px 23px 20px gray;
+    box-shadow: 2px 2px 15px 10px white;
     border-radius: 10%;
+    background-color:antiquewhite;
 }
-h2{
-    font-size: 40px;
-    text-align: center;
-    margin-top: 3%;
-    color:blue;
-    margin-bottom: 3%;
-}
-
 
 #header{
-    font-size: 20px;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color:rgb(223, 20, 9);
+    font-size: 25px;
     text-align: center;
+    margin-top: 7%;
 }
 
-#input{
-    position: relative;
-    height: 30%;
-    width: 100%;
-    /* background-color: green; */
+#con{
+    font-family:cursive;
+    font-size: 18px;
+    margin-left: 15%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
-#label{
-    font-size: 35px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-#inputfield{
-    margin-top: 3%;
-    margin-bottom: 2%;
-    height: 15%;
-    width: 30%;
-}
-
-#btn{
-    margin-bottom: 1%;
-    height: 17%;
-    width: 30%;
-    color: white;
-    background-color:blue;
-    font-size: 100%;
-}
-
-#result{
-    height: 34%;
-    width: 100%;
-}
-
-.com{
-    text-align: center;
-    font-size: 20px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    color: green;
-}
-
-#lowOrHi{
-    color: blue;
-    font-size: 30px;
-    font-weight: 900;
-    margin-top:2%;
+#weight-guide{
+    margin-top: 2%;
     margin-left: 5%;
-    text-align: center;
-    margin-bottom: 5%;
-}
-
-#newgame{
+    margin-bottom: 2%;
     font-size: 20px;
-    font-weight: 900;
-    color: red;
-    text-align: center;
-    margin-bottom: 10%;
+    color: blue;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+button{
+    width: 45%;
+    height:20%;
+    font-size: 15px;
+    margin-top: 8%;
+    color: black; 
+    margin-left: -14%;
+}
+#form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 
-/* Media query for mobile devices */
-@media only screen and (max-width: 480px) {
-    #main {
-        width: 90%; /* Make container width 100% for smaller screens */
+#results{
+    font-size:20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color:brown;
+  text-align: center;
+    margin-top: 4%;
+    margin: 3%;
+}
+
+@media only screen and (max-width:426px) {
+    #main{
         height: auto;
+        width: 80%;
     }
-    h2{
-        font-size:23px;
-        margin-top: 3%;
-        color:blue;
-        margin-bottom: 4%;
-    }
-    #header{
+    #weight-guide{
         font-size: 15px;
-        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        color:rgb(223, 20, 9);
-        text-align: left;
-        margin-left: 3%;
+        margin-bottom: 3%;
     }
-
-    #lowOrHi{
-       font-size: 15px;
-    }
-    #label{
-        font-size: 20px;
-    }
-
-    
-  #inputfield{
-    height: 20%;
-    width: 60%;
-}
-
-#btn{
-    height: 20%;
-    width: 60%;
-}
-   
-    #input{
-        position: relative;
-        height: 40%;
-        width: 100%;
-        margin-bottom: 4%;
+    #results{
+        font-style: 15px;
     }
 }
 
-@media only screen and (max-width:768px) {
-    #main {
-        width: 90%; /* Make container width 100% for smaller screens */
-        height: auto;
-    }
-    #btn{
-        height: 25%;
-        width: 40%;
-    }
-    #inputfield{
-        height: 25%;
-        width: 40%;
-    }
-}
+
